--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.username=root
 #数据库密码
 spring.datasource.password=pipelinedemo
 #数据库驱动
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #数据库MySQL为8.x时，驱动类为com.mysql.cj.jdbc.Driver
 ####
 #JPA持久化配置
